<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5DF4D"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageHello"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_hello"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_ubuntu_bold"
        android:gravity="center"
        android:text="@string/text_hi"
        android:textAlignment="center"
        android:textColor="#565E75"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHello" />

    <TextView
        android:id="@+id/text_happy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_ubuntu_bold"
        android:gravity="center"
        android:text="@string/text_happy"
        android:textAlignment="center"
        android:textColor="#565E75"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_hello" />


</androidx.constraintlayout.widget.ConstraintLayout>