<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentSlide">

    <ImageView
        android:id="@+id/imageFragment"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/hello_blank_fragment"
        app:layout_constraintBottom_toTopOf="@id/text_up"
        app:layout_constraintEnd_toEndOf="@id/text_up"
        app:layout_constraintStart_toStartOf="@id/text_up"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_ubuntu_bold"
        android:gravity="center"
        android:text="@string/text_sad"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/frameTextET"
        app:layout_constraintEnd_toEndOf="@id/text_up"
        app:layout_constraintStart_toStartOf="@id/text_up"
        app:layout_constraintTop_toBottomOf="@+id/imageFragment" />

    <FrameLayout
        android:id="@+id/frameTextET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imageFragment"
        app:layout_constraintStart_toStartOf="@id/imageFragment"
        app:layout_constraintTop_toBottomOf="@id/text_up">

        <TextView
            android:id="@+id/text_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_ubuntu_regular"
            android:gravity="center"
            android:text="@string/text_sad"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/EtFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:autofillHints=""
            android:background="@drawable/ic_edit_text"
            android:drawablePadding="12dp"
            android:hint="@string/text_input_name"
            android:inputType="text"
            android:paddingLeft="32dp"
            android:textColor="@color/black"
            android:textColorHint="#7C7C7C"
            android:textSize="20sp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>